--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@types/pouchdb": "^6.4.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.546.0",
     "next": "16.0.0",
     "next-pwa": "^5.6.0",
+    "pouchdb": "^9.0.0",
+    "pouchdb-browser": "^9.0.0",
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
